<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rl_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_input_layout_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_txt_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/string_first_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLength="15" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_input_layout_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_input_layout_first_name">

            <EditText
                android:id="@+id/edt_txt_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/string_last_name"
                android:imeOptions="actionDone"
                android:inputType="textCapWords"
                android:maxLength="15" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_insert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_input_layout_last_name"
            android:layout_marginTop="15dp"
            android:background="@drawable/my_button"
            android:text="@string/string_insert"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_container" />

</RelativeLayout>
